# BadAttitude

./: CMakeLists.txt
src/: main.cpp
src/block/: block.cpp  block.h
src/client/: surface.h
src/event/: event.cpp  event.h
src/server/: server.h
